Added vinyl-paths, del packages

--- a/package.json
+++ b/package.json
@@ -2,35 +2,39 @@
   "name": "chj-framework",
   "version": "0.3.0",
   "description": "Project of Christian Jánský.",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/chrisjansky/chj-framework.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "latest",
-    "glob": "latest",
-    "gulp": "latest",
-    "gulp-autoprefixer": "latest",
-    "gulp-clean": "latest",
-    "gulp-ftp": "latest",
-    "gulp-imagemin": "latest",
-    "gulp-jade": "latest",
-    "gulp-kss": "latest",
-    "gulp-load-plugins": "latest",
-    "gulp-minify-css": "latest",
-    "gulp-plumber": "latest",
-    "gulp-rename": "latest",
-    "gulp-sass": "latest",
-    "gulp-size": "latest",
-    "gulp-svg2png": "latest",
-    "gulp-uglify": "latest",
-    "gulp-uncss": "latest",
-    "gulp-usemin": "latest",
-    "gulp-watch": "latest",
-    "hygienist-middleware": "latest",
-    "node-bourbon": "latest",
-    "node-neat": "latest",
-    "yargs": "latest"
+    "browser-sync": "",
+    "del": "",
+    "glob": "",
+    "gulp": "",
+    "gulp-autoprefixer": "",
+    "gulp-ftp": "",
+    "gulp-imagemin": "",
+    "gulp-jade": "",
+    "gulp-kss": "",
+    "gulp-load-plugins": "",
+    "gulp-minify-css": "",
+    "gulp-plumber": "",
+    "gulp-rename": "",
+    "gulp-sass": "",
+    "gulp-size": "",
+    "gulp-svg2png": "",
+    "gulp-uglify": "",
+    "gulp-uncss": "",
+    "gulp-usemin": "",
+    "hygienist-middleware": "",
+    "node-bourbon": "",
+    "node-neat": "",
+    "vinyl-paths": "^1.0.0",
+    "yargs": ""
   }
 }
