--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -6,31 +6,35 @@
 
     "pages": "*.html",
     "jade": "assets/jade/*.jade",
-    "glob_jade": "assets/jade/**/*.jade",
-    "ignore_jade": "!assets/jade/**/_*",
+    "jade_glob": "assets/jade/**/*.jade",
+    "jade_ignore": "!assets/jade/**/_*",
 
     "scss": "assets/scss/*.scss",
+    "scss_glob": "assets/scss/**/*.scss",
+
     "css": "assets/css",
-    "glob_scss": "assets/scss/**/*.scss",
-    "glob_css": "assets/css/*.css",
+    "css_glob": "assets/css/*.css",
 
     "js": "assets/js/*.js",
-    "glob_js": "assets/js/**/*.js",
+    "js_glob": "assets/js/**/*.js",
 
-    "glob_images": "assets/images/**/*",
-    "ignore_images": "!assets/images/ignore{,/**}",
+    "images_glob": "assets/images/**/*",
+    "images_ignore": "!assets/images/_ignore{,/**}",
 
-    "glob_svg": "assets/svg/**/*",
+    "svg": "assets/svg/_build",
+    "svg_glob": "assets/svg/_build/**/*",
+    "svg_source_glob": "assets/svg/_source/**/*",
 
     "fallbacks": "assets/images/fallbacks",
 
-    "glob_data": "assets/data/*.json",
+    "data_glob": "assets/data/*.json",
 
     "kss": "assets/kss",
     "kss_css": "assets/css/styleguide.css"
   },
   "files": [
-
+    "assets/fonts/*",
+    "assets/favicon.ico"
   ],
   "styleguide": [
     "assets/kss/assets/prism.css"
