--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,7 @@
     "bower_components",
     "test",
     "tests",
-    "public",
-    "assets/css",
-    "*.html"
+    "gulp*.*"
   ],
   "devDependencies": {
     "normalize-css": "latest",
