--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chj-framework",
-  "version": "0.3.8",
+  "version": "0.4.0",
   "description": "Project of Christian Jánský.",
   "repository": {
     "type": "git",
@@ -12,30 +12,31 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "",
-    "del": "",
-    "glob": "",
-    "gulp": "",
-    "gulp-autoprefixer": "",
-    "gulp-ftp": "",
-    "gulp-imagemin": "",
-    "gulp-jade": "",
-    "gulp-kss": "",
-    "gulp-load-plugins": "",
-    "gulp-minify-css": "",
-    "gulp-plumber": "",
-    "gulp-rename": "",
-    "gulp-sass": "",
-    "gulp-size": "",
-    "gulp-svg2png": "",
-    "gulp-uglify": "",
-    "gulp-uncss": "",
-    "gulp-usemin": "",
+    "browser-sync": "^1.7.2",
+    "del": "^1.1.0",
+    "glob": "^4.3.1",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.0.0",
+    "gulp-ftp": "^1.0.1",
+    "gulp-imagemin": "^2.0.0",
+    "gulp-jade": "^0.10.0",
+    "gulp-kss": "0.0.2",
+    "gulp-load-plugins": "^0.7.1",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.2.4",
+    "gulp-size": "^1.1.0",
+    "gulp-svg-sprites": "^1.1.0",
+    "gulp-svg2png": "^0.3.0",
+    "gulp-uglify": "^1.0.2",
+    "gulp-uncss": "^0.5.1",
+    "gulp-usemin": "^0.3.8",
     "hygienist-middleware": "",
     "json-sass": "^1.2.1",
-    "node-bourbon": "",
-    "node-neat": "",
+    "node-bourbon": "^1.2.3",
+    "node-neat": "^1.3.0",
     "vinyl-paths": "^1.0.0",
-    "yargs": ""
+    "yargs": "^1.3.3"
   }
 }
