--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "normalize-css": "~3.0.2",
     "jquery": "~2.1.1",
     "jquery-easing-original": "~1.3.1",
-    "idangerous-swiper": "latest",
+    "idangerous-swiper": "^3.1.2",
     "featherlight": "latest"
   }
 }
