--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "~2.1.1",
     "jquery-easing-original": "~1.3.1",
     "idangerous-swiper": "^3.1.2",
-    "featherlight": "latest"
+    "featherlight": "~1.3.3",
+    "smoothstate": "~0.7.2"
   }
 }
