--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "jquery-easing-original": "~1.3.1",
     "idangerous-swiper": "^3.1.2",
     "featherlight": "~1.3.3",
-    "smoothstate": "~0.7.2"
+    "smoothstate": "~0.7.2",
+    "modernizr": "~2.8.3"
   }
 }
