--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "beepbeep": "^1.2.0",
     "browser-sync": "^1.9.1",
     "del": "^1.1.0",
     "glob": "^4.3.5",
