--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "del": "^1.1.0",
     "glob": "^4.3.5",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.0.0",
+    "gulp-autoprefixer": "2.0.0",
     "gulp-ftp": "^1.0.1",
     "gulp-imagemin": "^2.1.0",
     "gulp-inject": "^1.1.1",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^0.8.0",
-    "gulp-minify-css": "^0.3.11",
+    "gulp-minify-css": "0.3.11",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
@@ -32,7 +32,7 @@
     "gulp-svg2png": "^0.3.0",
     "gulp-uglify": "^1.0.2",
     "gulp-uncss": "^1.0.0",
-    "gulp-usemin": "^0.3.8",
+    "gulp-usemin": "0.3.8",
     "hygienist-middleware": "^0.1.0",
     "json-sass": "^1.3.3",
     "kss": "^2.1.0",
