--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "gulp-sass-bulk-import": "^0.3.2",
     "gulp-shell": "^0.4.0",
     "gulp-size": "^1.1.0",
     "gulp-svg2png": "^0.3.0",
