Gulp Added trailing slash to gulpconfig

--- a/gulp/gulpconfig.json
+++ b/gulp/gulpconfig.json
@@ -39,7 +39,7 @@
   },
   "dist": {
     "root": "dist/",
-    "styleguide": "dist/guide"
+    "styleguide": "dist/guide/"
   },
   "ftp": {
     "host": "chrisjansky.cz",
