--- a/package.json
+++ b/package.json
@@ -26,20 +26,18 @@
     "gulp-minify-css": "0.3.11",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
+    "gulp-sass": "^2.1.1",
     "gulp-sass-bulk-import": "^0.3.2",
     "gulp-shell": "^0.4.0",
     "gulp-size": "^1.1.0",
     "gulp-svg2png": "^0.3.0",
-    "gulp-uglify": "^1.0.2",
-    "gulp-uncss": "^1.0.0",
-    "gulp-usemin": "0.3.8",
+    "gulp-uglify": "^1.5.1",
+    "gulp-usemin": "^0.3.16",
     "hygienist-middleware": "^0.1.0",
     "json-sass": "^1.3.3",
     "kss": "^2.1.0",
-    "node-bourbon": "^1.2.3",
+    "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
-    "vinyl-paths": "^1.0.0",
-    "yargs": "^1.3.3"
+    "vinyl-paths": "^1.0.0"
   }
 }
