--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "glob": "^6.0.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-ftp": "^1.0.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
     "gulp-jade": "^1.1.0",
@@ -38,6 +37,7 @@
     "kss": "^2.1.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
+    "vinyl-ftp": "^0.4.5",
     "vinyl-paths": "^2.1.0"
   }
 }
