--- a/gulp/gulpconfig.json
+++ b/gulp/gulpconfig.json
@@ -25,11 +25,9 @@
     "imagesGlob": "app/assets/images/**/*",
     "imagesIgnore": "!app/assets/images/_ignore{,/**}",
 
-    "svgSourceGlob": "app/assets/svg/_source/**/*",
+    "svgSourceGlob": "app/assets/svg/*",
     "svgBuild": "app/assets/svg/_build/",
     "svgBuildGlob": "app/assets/svg/_build/**/*",
-
-    "fallbacks": "app/assets/images/fallbacks/",
 
     "dataRoot": "app/assets/data/",
     "dataGlob": "app/assets/data/*.json",
