--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gulp-sass-bulk-import": "^0.3.2",
     "gulp-shell": "^0.5.1",
     "gulp-size": "^2.0.0",
-    "gulp-svg2png": "^1.0.0",
+    "gulp-svg-sprite": "^1.2.16",
     "gulp-uglify": "^1.5.1",
     "gulp-usemin": "^0.3.16",
     "hygienist-middleware": "^0.1.0",
