--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "kss": "^2.1.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
-    "vinyl-ftp": "^0.4.5",
-    "vinyl-paths": "^2.1.0"
+    "vinyl-ftp": "^0.4.5"
   }
 }
