--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
-    "gulp-jade": "^1.1.0",
+    "gulp-pug": "^3.1.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.2",
     "gulp-plumber": "^1.0.1",
