--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-usemin": "^0.3.24",
     "hygienist-middleware": "^0.1.3",
-    "kss": "^2.1.0",
+    "kss": "^3.0.0-beta.15",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
     "vinyl-ftp": "^0.5.0"
