--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.0.13",
     "gulp-imagemin": "^3.0.3",
     "gulp-inject": "^4.1.0",
-    "gulp-pug": "^3.1.0",
     "gulp-load-plugins": "^1.3.0",
-    "gulp-minify-css": "^1.2.2",
     "gulp-plumber": "^1.1.0",
+    "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sass-bulk-import": "^1.0.1",
